[workspace]
resolver = "3"
members = [
    "cli",
    "pointer",
    "store",
    "git",
    "api",
    "transfer",
    "creds",
    "filter",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates — single source of truth for paths.
# Consumers depend via `dep = { workspace = true }`.
git-lfs-pointer  = { path = "pointer",  version = "0.0.0" }
git-lfs-store    = { path = "store",    version = "0.0.0" }
git-lfs-git      = { path = "git",      version = "0.0.0" }
git-lfs-api      = { path = "api",      version = "0.0.0" }
git-lfs-transfer = { path = "transfer", version = "0.0.0" }
git-lfs-creds    = { path = "creds",    version = "0.0.0" }
git-lfs-filter   = { path = "filter",   version = "0.0.0" }

# External crates shared across multiple members.
thiserror   = "2"
tempfile    = "3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
tokio       = { version = "1" }
tokio-util  = { version = "0.7", default-features = false }
futures     = { version = "0.3", default-features = false, features = ["std"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "http2", "stream"] }
url         = "2"
wiremock    = "0.6"
