[workspace]
resolver = "3"
members = [
    "cli",
    "pointer",
    "store",
    "git",
    "api",
    "transfer",
    "creds",
    "filter",
    "tests/cmd",
    "xtask",
]

# Let rustc strip release binaries
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

[workspace.package]
version    = "0.6.0"
edition    = "2024"
license    = "MIT"
authors    = ["Patrick Elsen <pelsen@xfbs.net>"]
repository = "https://gitlab.com/rustutils/git-lfs"
homepage   = "https://gitlab.com/rustutils/git-lfs"
keywords   = ["git", "lfs", "git-lfs"]
categories = ["development-tools"]

[workspace.dependencies]
# Internal crates — single source of truth for paths.
# Consumers depend via `dep = { workspace = true }`.
git-lfs-pointer  = { path = "pointer",  version = "0.6.0" }
git-lfs-store    = { path = "store",    version = "0.6.0" }
git-lfs-git      = { path = "git",      version = "0.6.0" }
git-lfs-api      = { path = "api",      version = "0.6.0" }
git-lfs-transfer = { path = "transfer", version = "0.6.0" }
git-lfs-creds    = { path = "creds",    version = "0.6.0" }
git-lfs-filter   = { path = "filter",   version = "0.6.0" }

# External crates shared across multiple members.
thiserror      = "2"
globset        = "0.4"
tempfile       = "3"
gix-attributes = "0.32"
gix-glob       = "0.25"
bstr           = "1"
clap           = { version = "4", features = ["derive", "string"] }
clap_mangen    = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha1        = "0.10"
sha2        = "0.10"
tokio       = { version = "1" }
tokio-util  = { version = "0.7", default-features = false }
futures     = { version = "0.3", default-features = false, features = ["std"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "http2", "stream"] }
url         = "2"
wiremock    = "0.6"
