[package]
name = "git-lfs-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
