[package]
name = "git-lfs-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-lfs-creds    = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_urlencoded = "0.7"
thiserror        = { workspace = true }
tokio            = { workspace = true, features = ["rt"] }
url              = { workspace = true }

[dev-dependencies]
base64   = "0.22"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
