[package]
name                 = "git-lfs-api"
description          = "HTTP client for the Git LFS batch and locking APIs"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "../README.md"
keywords             = ["git", "lfs", "git-lfs", "batch", "locking"]
categories           = ["web-programming::http-client", "api-bindings"]

[dependencies]
git-lfs-creds    = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_urlencoded = "0.7"
thiserror        = { workspace = true }
tokio            = { workspace = true, features = ["rt"] }
url              = { workspace = true }

[dev-dependencies]
base64   = "0.22"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
