[package]
name = "git-lfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap       = { version = "4", features = ["derive"] }
globset    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
tempfile   = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread"] }
url        = { workspace = true }

git-lfs-pointer  = { workspace = true }
git-lfs-store    = { workspace = true }
git-lfs-git      = { workspace = true }
git-lfs-api      = { workspace = true }
git-lfs-transfer = { workspace = true }
git-lfs-creds    = { workspace = true }
git-lfs-filter   = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock   = { workspace = true }
