[package]
name                 = "git-lfs"
description          = "Git LFS — large file storage for git, reimplemented in Rust"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "README.md"
keywords             = ["git", "lfs", "git-lfs", "vcs", "cli"]
categories           = ["command-line-utilities", "development-tools"]
default-run          = "git-lfs"


[dependencies]
clap       = { version = "4", features = ["derive", "wrap_help"] }
globset    = { workspace = true }
reqwest    = { workspace = true }
rustls         = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
serde      = { workspace = true }
serde_json = { workspace = true }
sha1       = { workspace = true }
sha2       = { workspace = true }
tempfile   = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread"] }
url        = { workspace = true }

git-lfs-pointer  = { workspace = true }
git-lfs-store    = { workspace = true }
git-lfs-git      = { workspace = true }
git-lfs-api      = { workspace = true }
git-lfs-transfer = { workspace = true }
git-lfs-creds    = { workspace = true }
git-lfs-filter   = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock   = { workspace = true }
