[package]
name                 = "git-lfs-creds"
description          = "Credential helper bridge for Git LFS (git credential fill/approve/reject)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "README.md"
keywords             = ["git", "lfs", "git-lfs", "credentials", "auth"]
categories           = ["authentication", "development-tools"]

[dependencies]
git-lfs-git = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
url         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
