[package]
name                 = "git-lfs-filter"
description          = "Clean and smudge filters and the filter-process protocol for Git LFS"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "README.md"
keywords             = ["git", "lfs", "git-lfs", "smudge", "clean"]
categories           = ["development-tools", "filesystem"]

[dependencies]
git-lfs-pointer  = { workspace = true }
git-lfs-store    = { workspace = true }
git-lfs-transfer = { workspace = true }
git-lfs-git      = { workspace = true }
sha2             = { workspace = true }
tempfile         = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
