[package]
name = "git-lfs-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-lfs-pointer = { workspace = true }
thiserror       = { workspace = true }
gix-attributes  = { workspace = true }
gix-glob        = { workspace = true }
bstr            = { workspace = true }

[dev-dependencies]
sha2     = { workspace = true }
tempfile = { workspace = true }
