[package]
name                 = "git-lfs-store"
description          = "Content-addressable on-disk store for Git LFS objects"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "README.md"
keywords             = ["git", "lfs", "git-lfs", "storage", "content-addressable"]
categories           = ["filesystem", "development-tools"]

[dependencies]
git-lfs-pointer = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
# `umask` syscall for honoring git's `core.sharedRepository` /
# umask behavior when chmoding committed objects.
libc = "0.2"
