[package]
name = "git-lfs-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-lfs-api     = { workspace = true }
git-lfs-store   = { workspace = true }
git-lfs-pointer = { workspace = true }

futures    = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
tokio-util = { workspace = true, features = ["io", "io-util"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = { workspace = true }
tokio      = { workspace = true, features = ["test-util"] }
url        = { workspace = true }
wiremock   = { workspace = true }
