[package]
name                 = "git-lfs-transfer"
description          = "Concurrent transfer queue and basic adapter for Git LFS uploads and downloads"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "README.md"
keywords             = ["git", "lfs", "git-lfs", "transfer", "upload"]
categories           = ["web-programming::http-client", "asynchronous"]

[dependencies]
git-lfs-api     = { workspace = true }
git-lfs-store   = { workspace = true }
git-lfs-pointer = { workspace = true }

futures    = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
sha2       = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
tokio-util = { workspace = true, features = ["io", "io-util"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = { workspace = true }
tokio      = { workspace = true, features = ["test-util"] }
url        = { workspace = true }
wiremock   = { workspace = true }
