[package]
name              = "xtask"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
clap           = { workspace = true }
clap_mangen    = { workspace = true }
pulldown-cmark = { workspace = true }
regex          = "1"
git-lfs        = { path = "../cli" }

[dev-dependencies]
tempfile = { workspace = true }
