# Rust test helpers for the upstream shell-test suite, alongside the
# vendored Go ones in this directory. Each `src/bin/<name>.rs` becomes
# a binary with that name. Not published — invoked only from
# `tests/Makefile`.
[package]
name              = "lfstest"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
git-lfs-pointer  = { workspace = true }
git-lfs-store    = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
