[package]
name      = "lfstest-testutils"
version   = "0.0.0"
edition.workspace = true
license.workspace = true
publish   = false

[dependencies]
git-lfs-pointer  = { workspace = true }
git-lfs-store    = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
